# whiskeyfyi

./: .gitignore  README.md  SKILL.md  demo.tape  pyproject.toml
skills/whiskey-tools/: SKILL.md
src/whiskeyfyi/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_api.py
