[project]
name = "whiskeyfyi"
version = "0.1.3"
description = "Whiskey knowledge API client — search whiskey types, distilleries, and terms from WhiskeyFYI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "whiskey",
    "whisky",
    "bourbon",
    "scotch",
    "distillery",
    "cask",
    "single-malt",
    "rye",
    "spirits",
    "tasting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["whiskeyfyi[api,cli,mcp]"]

[project.scripts]
whiskeyfyi = "whiskeyfyi.cli:app"
whiskeyfyi-mcp = "whiskeyfyi.mcp_server:main"

[project.entry-points."mcp.servers"]
whiskeyfyi = "whiskeyfyi.mcp_server:mcp"

[project.urls]
Homepage = "https://whiskeyfyi.com"
Documentation = "https://whiskeyfyi.com/developers/"
Repository = "https://github.com/fyipedia/whiskeyfyi"
Issues = "https://github.com/fyipedia/whiskeyfyi/issues"
Changelog = "https://github.com/fyipedia/whiskeyfyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whiskeyfyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
